removed guacamole in xrdp branch
I do not want to use guacamole in the same container. I use
docker-compose.