@@ -52,16 +52,6 @@ dpkg -i /tmp/x11rdp/x11rdp_0.9.0+devel-1_amd64.deb
 # xrdp needs to be installed seperately
 dpkg -i /tmp/x11rdp/xrdp_0.9.0+devel_amd64.deb
 
-# Install Guac
-echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | /usr/bin/debconf-set-selections
-apt-get install -y --force-yes oracle-java8-installer
-apt-get install -y --force-yes oracle-java8-set-default
-apt-get install -qy --force-yes --no-install-recommends libossp-uuid-dev \
-                                                        libpng12-dev \
-                                                        libfreerdp-dev \
-                                                        libcairo2-dev \
-                                                        tomcat7
-
 
 #########################################
 ##  FILES, SERVICES AND CONFIGURATION  ##
@@ -263,59 +253,6 @@ exec 2>&1
 exec env DISPLAY=:1 HOME=/nobody /sbin/setuser nobody  /usr/bin/openbox-session
 EOT
 
-mkdir -p /etc/service/tomcat7
-cat <<'EOT' > /etc/service/tomcat7/run
-#!/bin/bash
-exec 2>&1
-
-touch /var/lib/tomcat7/logs/catalina.out
-
-cd /var/lib/tomcat7
-
-exec java -Djava.util.logging.config.file=/var/lib/tomcat7/conf/logging.properties \
-          -Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager \
-          -Djava.awt.headless=true -Xmx128m -XX:+UseConcMarkSweepGC \
-          -Djava.endorsed.dirs=/usr/share/tomcat7/endorsed \
-          -classpath /usr/share/tomcat7/bin/bootstrap.jar:/usr/share/tomcat7/bin/tomcat-juli.jar \
-          -Dcatalina.base=/var/lib/tomcat7 -Dcatalina.home=/usr/share/tomcat7 \
-          -Djava.io.tmpdir=/tmp/tomcat7-tomcat7-tmp org.apache.catalina.startup.Bootstrap start
-EOT
-
-mkdir -p /etc/service/guacd
-cat <<'EOT' > /etc/service/guacd/run
-#!/bin/bash
-exec 2>&1
-
-exec /usr/local/sbin/guacd -f
-EOT
-
-mkdir -p /etc/guacamole
-cat <<'EOT' > /etc/guacamole/guacamole.properties
-# Location to read extra .jar's from (don't change for this docker config)
-lib-directory:  /var/lib/guacamole/classpath
-
-# Hostname and port of guacamole proxy (don't change for this docker config)
-guacd-hostname: localhost
-guacd-port:     4822
-
-# Auth provider class
-auth-provider: net.sourceforge.guacamole.net.auth.noauth.NoAuthenticationProvider
-
-# NoAuth properties
-noauth-config: /etc/guacamole/noauth-config.xml
-EOT
-
-
-cat <<'EOT' > /etc/guacamole/noauth-config.xml
-<configs>
-    <config name="GUI_APPLICATION" protocol="rdp">
-        <param name="hostname" value="127.0.0.1" />
-        <param name="port" value="3389" />
-        <param name="color-depth" value="16" />
-    </config>
-</configs>
-EOT
-
 # Openbox User nobody autostart
 cat <<'EOT' > /nobody/.config/openbox/autostart
 # Programs that will run after Openbox has started
@@ -333,32 +270,6 @@ chmod -R +x /etc/service/ /etc/my_init.d/
 ##             INSTALLATION            ##
 #########################################
 
-# Make needed directories
-mkdir -p /var/cache/tomcat7
-mkdir -p /var/lib/guacamole/classpath
-mkdir -p /usr/share/tomcat7/.guacamole
-mkdir -p /usr/share/tomcat7-root/.guacamole
-mkdir -p /root/.guacamole
-
-# Install guacd
-dpkg -i /tmp/guacamole/guacamole-server_0.9.7_amd64.deb
-ldconfig
-
-# Configure tomcat
-cp /tmp/guacamole/guacamole-0.9.7.war /var/lib/tomcat7/webapps/guacamole.war
-cp /tmp/guacamole/guacamole-auth-noauth-0.9.7.jar /var/lib/guacamole/classpath
-ln -s /etc/guacamole/guacamole.properties /usr/share/tomcat7/.guacamole/
-ln -s /etc/guacamole/guacamole.properties /usr/share/tomcat7-root/.guacamole/
-ln -s /etc/guacamole/guacamole.properties /root/.guacamole/
-
-# Fix tomcat webroot
-rm -Rf /var/lib/tomcat7/webapps/ROOT
-ln -s /var/lib/tomcat7/webapps/guacamole.war /var/lib/tomcat7/webapps/ROOT.war 
-
-### Compensate for GUAC-513
-ln -s /usr/local/lib/freerdp/guacsnd.so /usr/lib/x86_64-linux-gnu/freerdp/ 
-ln -s /usr/local/lib/freerdp/guacdr.so /usr/lib/x86_64-linux-gnu/freerdp/
-
 # openbox confg
 cp /tmp/openbox/rc.xml /nobody/.config/openbox/rc.xml
 chown nobody:users /nobody/.config/openbox/rc.xml
@@ -374,4 +285,4 @@ chown -R 777 /usr/lib/pulse-4.0/modules
 # Clean APT install files
 apt-get autoremove -y 
 apt-get clean -y
-rm -rf /var/lib/apt/lists/* /var/cache/* /var/tmp/* /tmp/guacamole /tmp/openbox /tmp/x11rdp
+rm -rf /var/lib/apt/lists/* /var/cache/* /var/tmp/* /tmp/openbox /tmp/x11rdp
